# gml-popl24

./: .gitignore  Makefile  README.md  dune-project  gml.opam  init.sh  run-in-opam-switch  tests-interactive.sh  tests-silent.sh  tests.sh
examples/: badhof.ml  badunify.ml  bspawn.ml  counterex.ml  dblrec.ml  deadlock.ml  deadlock1.ml  deadlock2.ml  deadlock3.ml  deadlock4.ml  deadlock5.ml  deadlock6.ml  deadlock7.ml  deadlock8.ml  escape.ml  forkjoin.ml  ftest.ml  fun.ml  futlistmap.ml  hello.ml  hof.ml  hof2.ml  hof3.ml  kj.ml  mkfutlist.ml  multifj.ml  nodeadlock.ml  nodeadlock3.ml  nodeadlock8.ml  notescape.ml  notescape2.ml  notfj.ml  passon.ml  pi.ml  pipeline.ml  pipeline2.ml  pipelinewrong.ml  pipelinewrong2.ml  qsort.ml  quicksort.ml  (+16 more)
expected_out/paper-examples/: blellochproduce.ml.out  list_pi.ml.out  pipeline_pi.ml.out  pipeline_pi_full.ml.out  (+2 more)
paper-examples/: blellochproduce.ml  list_pi.ml  map.ml  pipeline_pi.ml  pipeline_pi_full.ml  qsort.ml  tree-rev.ml  tree.ml
src/: ast.ml  astPrint.ml  dot.ml  dune  grPrint.ml  grUtil.ml  graph.ml  inferGr.ml  inferTy.ml  main.ml  norm.ml  todo.md  tyPrint.ml  visitor.ml
src/parser/: lexer.mll  parser.mly
src/util/: unionFind.ml  vertex.ml  vertutil.ml
testcases/: adt.ml  adt2.ml  adt3.ml  affinesucceed1.ml  affinesucceed2.ml  affinesucceed3.ml  affinesucceed4.ml  external1.ml  fib.ml  inst1.ml  inst2.ml  map1.ml  map2.ml  map3.ml  map4.ml  map5.ml  ref1.ml  ref2.ml  ref3.ml  simple1.ml  simple10.ml  simple11.ml  simple2.ml  simple3.ml  simple4.ml  simple5.ml  simple6.ml  simple7.ml  simple8.ml  simple9.ml
(+28 files in other folders)
