(env
  (dev
    (flags (:standard -warn-error -A
    -w -66
    -w -26
    -w -33
    -w -27
    -w -29
    -w -39
    -w -32))))

(include_subdirs unqualified)

(executable
 (public_name gml)
 (name main)
 (libraries unix)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))

(subdir parser
 (ocamllex lexer)
 (menhir
  (modules parser)
  (flags --unused-tokens --fixed-exception)))

(subdir analysis)